--- a/0xXOC-Frontend/package.json
+++ b/0xXOC-Frontend/package.json
@@ -11,13 +11,16 @@
     "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
-    "@privy-io/react-auth": "^2.9.1",
+    "@privy-io/react-auth": "^2.13.0",
+    "@types/react-router-dom": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.6.0",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
-    "viem": "^2.27.0"
+    "viem": "^2.29.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
