--- a/0xXOC-Backend/package.json
+++ b/0xXOC-Backend/package.json
@@ -5,11 +5,14 @@
     "@langchain/core": "^0.3.55",
     "@langchain/langgraph": "^0.2.68",
     "@langchain/openai": "^0.5.10",
+    "@types/multer": "^1.4.12",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "multer": "^1.4.5-lts.2",
     "node-telegram-bot-api": "^0.66.0",
     "reflect-metadata": "^0.2.2",
+    "uuid": "^11.1.0",
     "viem": "^2.29.1"
   },
   "devDependencies": {
