--- a/0xXOC-Frontend/package.json
+++ b/0xXOC-Frontend/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@privy-io/react-auth": "^2.13.0",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.0",
