--- a/0xXOC-Backend/package.json
+++ b/0xXOC-Backend/package.json
@@ -11,6 +11,7 @@
     "express": "^5.1.0",
     "multer": "^1.4.5-lts.2",
     "node-telegram-bot-api": "^0.66.0",
+    "qr-scanner": "^1.4.2",
     "reflect-metadata": "^0.2.2",
     "uuid": "^11.1.0",
     "viem": "^2.29.1"
