--- a/0xXOC-Frontend/package.json
+++ b/0xXOC-Frontend/package.json
@@ -14,6 +14,7 @@
     "@privy-io/react-auth": "^2.13.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.9.0",
+    "qr-scanner": "^1.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
