--- a/0xXOC-Frontend/package.json
+++ b/0xXOC-Frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@privy-io/react-auth": "^2.13.0",
     "@types/react-router-dom": "^5.3.3",
+    "@vercel/related-projects": "^1.0.0",
     "axios": "^1.9.0",
     "qr-scanner": "^1.4.2",
     "react": "^18.2.0",
